--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -9,7 +9,7 @@
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Chocolates
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
+            <div class="dropdown-menu border" aria-labelledby="all-products-link">
                 <a href="{% url 'chocolates'%}?sort=choc_price&direction=asc" class="dropdown-item purple-text">By
                     Price</a>
                 <a href="{% url 'chocolates'%}?sort=choc_rating&direction=desc" class="dropdown-item purple-text">By
@@ -26,7 +26,7 @@
                 aria-haspopup="true" aria-expanded="false">
                 Keto
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="keto-chocolate-link">
+            <div class="dropdown-menu border" aria-labelledby="keto-chocolate-link">
                 <a href="{% url 'chocolates' %}?choc_category_display=dark_choc" class="dropdown-item purple-text">Dark
                     Chocolate</a>
                 <a href="{% url 'chocolates' %}?choc_category_display=milk_choc" class="dropdown-item purple-text">Milk
@@ -44,7 +44,7 @@
                 aria-haspopup="true" aria-expanded="false">
                 Vegan
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="keto-chocolate-link">
+            <div class="dropdown-menu border" aria-labelledby="keto-chocolate-link">
                 <a href="{% url 'chocolates' %}?choc_category_display=dark_choc" class="dropdown-item purple-text">Dark
                     Chocolate</a>
                 <a href="{% url 'chocolates' %}?choc_category_display=milk_choc" class="dropdown-item purple-text">Milk
@@ -62,7 +62,7 @@
                 aria-haspopup="true" aria-expanded="false">
                 Gluten-Free
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="keto-chocolate-link">
+            <div class="dropdown-menu border" aria-labelledby="keto-chocolate-link">
                 <a href="{% url 'chocolates' %}?choc_category_display=dark_choc" class="dropdown-item purple-text">Dark
                     Chocolate</a>
                 <a href="{% url 'chocolates' %}?choc_category_display=milk_choc" class="dropdown-item purple-text">Milk
@@ -80,7 +80,7 @@
                 aria-haspopup="true" aria-expanded="false">
                 Special Offers
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="specials-link">
+            <div class="dropdown-menu border" aria-labelledby="specials-link">
                 <a href="" class="dropdown-item purple-text">New Arrivals</a>
                 <a href="" class="dropdown-item purple-text">Deals</a>
                 <a href="" class="dropdown-item purple-text">Clearance</a>
