--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -12,13 +12,13 @@
     </a>
 
     <!-- Search form -->
-    <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
+    <div class="dropdown-menu border-0 w-100 p-3 rounded-lg my-0" aria-labelledby="mobile-search">
         <form class="form" method="GET" action="{% url 'chocolates' %}">
             <div class="input-group w-100">
-                <input class="form-control border border-black rounded-0" type="text" name="q"
-                    placeholder="Search our site">
+                <input class="form-control border border-purple rounded-lg" type="text" name="q"
+                    placeholder="Search for chocolates..">
                 <div class="input-group-append">
-                    <button class="form-control form-control btn btn-black border border-black rounded-0" type="submit">
+                    <button class="form-control form-control btn btn-purple border border-purple rounded-lg" type="submit">
                         <span class="icon">
                             <i class="fas fa-search"></i>
                         </span>
