--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -3,7 +3,7 @@
 
 <!-- This list item provides a button to open the search bar -->
 <li class="list-inline-item">
-    <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown"
+    <a class="nav-link d-block d-lg-none purple-text" href="#" id="mobile-search" data-toggle="dropdown"
         aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
             <div><i class="fas fa-search fa-lg"></i></div>
@@ -20,7 +20,7 @@
                 <div class="input-group-append">
                     <button class="form-control form-control btn btn-purple border border-purple rounded-lg" type="submit">
                         <span class="icon">
-                            <i class="fas fa-search"></i>
+                            <i class="fas fa-search "></i>
                         </span>
                     </button>
                 </div>
@@ -31,23 +31,23 @@
 
 <!-- This list item allows user to open the My Account drop down menu -->
 <li class="list-inline-item dropdown">
-    <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown"
+    <a class="purple-text nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown"
         aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
             <div><i class="fas fa-user fa-lg"></i></div>
             <p class="my-0">My Account</p>
         </div>
     </a>
-    <div class="dropdown-menu border-0" aria-labelledby="user-options">
+    <div class="dropdown-menu border" aria-labelledby="user-options">
         {% if request.user.is_authenticated %}
         {% if request.user.is_superuser %}
-        <a href="{% url 'account_logout' %}" class="dropdown-item">Product Management</a>
+        <a href="{% url 'account_logout' %}" class="dropdown-item purple-text">Product Management</a>
         {% endif %}
-        <a href="#" class="dropdown-item">My Profile</a>
-        <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+        <a href="#" class="dropdown-item purple-text">My Profile</a>
+        <a href="{% url 'account_logout' %}" class="dropdown-item purple-text">Logout</a>
         {% else %}
-        <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-        <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+        <a href="{% url 'account_signup' %}" class="dropdown-item purple-text">Register</a>
+        <a href="{% url 'account_login' %}" class="dropdown-item purple-text">Login</a>
         {% endif %}
     </div>
 </li>
