--- a/templates/base.html
+++ b/templates/base.html
@@ -141,11 +141,11 @@
     </div>
 
     <!-- Sub navbar, this uses dtl tags to include the navigation html snippets from the 'includes' folder -->
-    <div class="row bg-white">
+    <div class="row bg-white purple-text">
       <nav class="navbar navbar-expand-lg navbar-light w-100">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+        <button class="navbar-toggler purple-text border" type="button" data-toggle="collapse" data-target="#main-nav"
           aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon purple-text"></span>
         </button>
         {% include 'includes/mobile-top-header.html' %}
         {% include 'includes/main-nav.html' %}
