--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -2,69 +2,72 @@
 
 
 <!-- This list item provides a button to open the search bar -->
-<li class="list-inline-item">
-    <a class="nav-link d-block d-lg-none purple-text" href="#" id="mobile-search" data-toggle="dropdown"
-        aria-haspopup="true" aria-expanded="false">
-        <div class="text-center">
-            <div><i class="fas fa-search fa-lg"></i></div>
-            <p class="my-0">Search</p>
-        </div>
-    </a>
-
-    <!-- Search form -->
-    <div class="dropdown-menu border-0 w-100 p-3 rounded-lg my-0" aria-labelledby="mobile-search">
-        <form class="form" method="GET" action="{% url 'chocolates' %}">
-            <div class="input-group w-100">
-                <input class="form-control border border-purple rounded-lg" type="text" name="q"
-                    placeholder="Search for chocolates..">
-                <div class="input-group-append">
-                    <button class="form-control form-control btn btn-purple border border-purple rounded-lg" type="submit">
-                        <span class="icon">
-                            <i class="fas fa-search "></i>
-                        </span>
-                    </button>
-                </div>
+<ul>
+    <li class="list-inline-item">
+        <a class="nav-link d-block d-lg-none purple-text" href="#" id="mobile-search" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            <div class="text-center">
+                <div><i class="fas fa-search fa-lg"></i></div>
+                <p class="my-0">Search</p>
             </div>
-        </form>
-    </div>
-</li>
+        </a>
 
-<!-- This list item allows user to open the My Account drop down menu -->
-<li class="list-inline-item dropdown">
-    <a class="purple-text nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown"
-        aria-haspopup="true" aria-expanded="false">
-        <div class="text-center">
-            <div><i class="fas fa-user fa-lg"></i></div>
-            <p class="my-0">My Account</p>
+        <!-- Search form -->
+        <div class="dropdown-menu border-0 w-100 p-3 rounded-lg my-0" aria-labelledby="mobile-search">
+            <form class="form" method="GET" action="{% url 'chocolates' %}">
+                <div class="input-group w-100">
+                    <input class="form-control border border-purple rounded-lg" type="text" name="q"
+                        placeholder="Search for chocolates..">
+                    <div class="input-group-append">
+                        <button class="form-control form-control btn btn-purple border border-purple rounded-lg"
+                            type="submit">
+                            <span class="icon">
+                                <i class="fas fa-search "></i>
+                            </span>
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
-    </a>
-    <div class="dropdown-menu border" aria-labelledby="user-options">
-        {% if request.user.is_authenticated %}
-        {% if request.user.is_superuser %}
-        <a href="{% url 'account_logout' %}" class="dropdown-item purple-text">Product Management</a>
-        {% endif %}
-        <a href="#" class="dropdown-item purple-text">My Profile</a>
-        <a href="{% url 'account_logout' %}" class="dropdown-item purple-text">Logout</a>
-        {% else %}
-        <a href="{% url 'account_signup' %}" class="dropdown-item purple-text">Register</a>
-        <a href="{% url 'account_login' %}" class="dropdown-item purple-text">Login</a>
-        {% endif %}
-    </div>
-</li>
+    </li>
 
-<!-- This list item allows access to the shopping bag -->
-<li class="list-inline-item">
-    <a class="{% if grand_total %}active-cart font-weight-bold{% else %}purple-text{% endif %} nav-link d-block d-lg-none"
-        href="{% url 'view_cart' %}">
-        <div class="text-center">
-            <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-            <p class="my-0">
-                {% if grand_total %}
-                ${{ grand_total|floatformat:2 }}
-                {% else %}
-                $0.00
-                {% endif %}
-            </p>
+    <!-- This list item allows user to open the My Account drop down menu -->
+    <li class="list-inline-item dropdown">
+        <a class="purple-text nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            <div class="text-center">
+                <div><i class="fas fa-user fa-lg"></i></div>
+                <p class="my-0">My Account</p>
+            </div>
+        </a>
+        <div class="dropdown-menu border" aria-labelledby="user-options">
+            {% if request.user.is_authenticated %}
+            {% if request.user.is_superuser %}
+            <a href="{% url 'account_logout' %}" class="dropdown-item purple-text">Product Management</a>
+            {% endif %}
+            <a href="#" class="dropdown-item purple-text">My Profile</a>
+            <a href="{% url 'account_logout' %}" class="dropdown-item purple-text">Logout</a>
+            {% else %}
+            <a href="{% url 'account_signup' %}" class="dropdown-item purple-text">Register</a>
+            <a href="{% url 'account_login' %}" class="dropdown-item purple-text">Login</a>
+            {% endif %}
         </div>
-    </a>
-</li>
+    </li>
+
+    <!-- This list item allows access to the shopping bag -->
+    <li class="list-inline-item">
+        <a class="{% if grand_total %}active-cart font-weight-bold{% else %}purple-text{% endif %} nav-link d-block d-lg-none"
+            href="{% url 'view_cart' %}">
+            <div class="text-center">
+                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                <p class="my-0">
+                    {% if grand_total %}
+                    ${{ grand_total|floatformat:2 }}
+                    {% else %}
+                    $0.00
+                    {% endif %}
+                </p>
+            </div>
+        </a>
+    </li>
+</ul>
