--- a/templates/base.html
+++ b/templates/base.html
@@ -104,7 +104,7 @@
             </a>
 
             <!-- Account log in dtl logic -->
-            <div class="dropdown-menu border-0" aria-labelledby="user-options">
+            <div class="dropdown-menu border-purple" aria-labelledby="user-options">
               {% if request.user.is_authenticated %}
               {% if request.user.is_superuser %}
               <a href="" class="dropdown-item purple-text">Product Management</a>
@@ -143,7 +143,7 @@
     <!-- Sub navbar, this uses dtl tags to include the navigation html snippets from the 'includes' folder -->
     <div class="row bg-white purple-text">
       <nav class="navbar navbar-expand-lg navbar-light w-100">
-        <button class="navbar-toggler purple-text border" type="button" data-toggle="collapse" data-target="#main-nav"
+        <button class="navbar-toggler purple-text border-purple" type="button" data-toggle="collapse" data-target="#main-nav"
           aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon purple-text"></span>
         </button>
