Add styling to adjust quantity buttons and center input text

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,7 +5,7 @@
 
         <!-- All Products drop down menu -->
         <li class="nav-item dropdown">
-            <a class="font-weight-bold nav-link mr-5 purple-text h4 glow" href="#" id="all-products-link"
+            <a class="font-weight-bold nav-link mr-5 purple-text h4 glow text-hover-glow" href="#" id="all-products-link"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Chocolates
             </a>
