--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -75,7 +75,7 @@
     
                                         <!-- Button to reduce number of chocolates -->
                                         <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-sm btn-black rounded-0"
+                                            <button class="decrement-qty btn btn-sm btn-purple rounded-sm"
                                                 data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
                                                 <span>
                                                     <i class="fas fa-minus fa-sm"></i>
@@ -83,13 +83,13 @@
                                             </button>
                                         </div>
     
-                                        <input class="form-control qty_input" type="number" name="quantity" value="{{ item.quantity }}"
+                                        <input class="form-control qty_input text-center" type="number" name="quantity" value="{{ item.quantity }}"
                                             min="1" max="99" data-item_id="{{ item.item_id }}"
                                             id="id_qty_{{ item.item_id }}">
     
                                         <!-- Button to increase number of chocolates -->
                                         <div class="input-group-append">
-                                            <button class="increment-qty btn btn-sm btn-black rounded-0"
+                                            <button class="increment-qty btn btn-sm btn-purple rounded-sm"
                                                 data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
                                                 <span>
                                                     <i class="fas fa-plus fa-sm"></i>
