--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -47,7 +47,7 @@
                             <th scope="col">Chocolate Info</th>
                             <th scope="col"></th>
                             <th scope="col">Price</th>
-                            <th scope="col">Qty</th>
+                            <th scope="col">Quantity</th>
                             <th scope="col">Subtotal</th>
                         </tr>
                     </thead>
