--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -47,7 +47,7 @@
                             <th scope="col">Chocolate Info</th>
                             <th scope="col"></th>
                             <th scope="col">Price</th>
-                            <th scope="col">Quantity</th>
+                            <th scope="col" id="qty-input-table-cell">Quantity</th>
                             <th scope="col">Subtotal</th>
                         </tr>
                     </thead>
@@ -101,8 +101,10 @@
                                 </div>
                             </form>
                             <!-- Form ends above this line -->
-                            <a class="update-link text-success"><small>Update</small></a>
-                            <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"><small>Remove</small></a>
+                            <div id="qty-input-table-cell">
+                                <a class="update-link text-success"><small>Update</small></a>
+                                <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"><small>Remove</small></a>
+                            </div>
                         </td>
                         <td class="py-3">
                             <p class="my-0">€{{ item.chocolate.choc_price | calc_subtotal:item.quantity }}</p>
