--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -47,7 +47,7 @@
                             <th scope="col">Chocolate Info</th>
                             <th scope="col"></th>
                             <th scope="col">Price</th>
-                            <th scope="col" id="qty-input-table-cell">Quantity</th>
+                            <th scope="col">Qty</th>
                             <th scope="col">Subtotal</th>
                         </tr>
                     </thead>
@@ -75,7 +75,7 @@
     
                                         <!-- Button to reduce number of chocolates -->
                                         <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-sm btn-purple rounded-sm"
+                                            <button class="decrement-qty btn btn-sm btn-black rounded-0"
                                                 data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
                                                 <span>
                                                     <i class="fas fa-minus fa-sm"></i>
@@ -83,13 +83,13 @@
                                             </button>
                                         </div>
     
-                                        <input class="form-control qty_input text-center" type="number" name="quantity" value="{{ item.quantity }}"
+                                        <input class="form-control qty_input" type="number" name="quantity" value="{{ item.quantity }}"
                                             min="1" max="99" data-item_id="{{ item.item_id }}"
                                             id="id_qty_{{ item.item_id }}">
     
                                         <!-- Button to increase number of chocolates -->
                                         <div class="input-group-append">
-                                            <button class="increment-qty btn btn-sm btn-purple rounded-sm"
+                                            <button class="increment-qty btn btn-sm btn-black rounded-0"
                                                 data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
                                                 <span>
                                                     <i class="fas fa-plus fa-sm"></i>
@@ -101,10 +101,8 @@
                                 </div>
                             </form>
                             <!-- Form ends above this line -->
-                            <div id="qty-input-table-cell">
-                                <a class="update-link text-success"><small>Update</small></a>
-                                <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"><small>Remove</small></a>
-                            </div>
+                            <a class="update-link text-success"><small>Update</small></a>
+                            <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"><small>Remove</small></a>
                         </td>
                         <td class="py-3">
                             <p class="my-0">€{{ item.chocolate.choc_price | calc_subtotal:item.quantity }}</p>
