--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -38,7 +38,7 @@
 
     <!-- Second row contains the chocolates, this row consists of another two rows -->
     <div class="row">
-        <div class="chocolate-container col-8 offset-1">
+        <div class="chocolate-container col-10 offset-1">
 
             <div class="row mt-2 mb-2">
                 <!-- This div contains the sorting options, displays a drop down menu with the options -->
@@ -73,12 +73,12 @@
             <div class="row">
                 {% for chocolate in chocolates %}
                 <!-- Creates a bootstrap card for each chocolate -->
-                <div class="col-sm-6 col-md-6 col-lg-6 col-xl-5">
+                <div class="col-sm-6 col-md-6 col-lg-6 col-xl-3">
                     <div class="card h-100 border-0 rounded-2">
 
                         <!-- Card image -->
                         {% if chocolate.choc_image %}
-                        <div id="choc-image-container">
+                        <div class="choc-image-container">
                             <a href="{% url 'chocolate_detail' chocolate.id %}">
                                 <img class="card-img-top img-fluid rounded-2" src="{{ chocolate.choc_image.url }}"
                                     alt="{{ chocolate.choc_name }}">
