--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -96,7 +96,7 @@
                                         </button>
                                     </div>
 
-                                    <input class="form-control qty_input" type="number" name="quantity" value="1"
+                                    <input class="form-control qty_input text-center" type="number" name="quantity" value="1"
                                         min="1" max="99" data-item_id="{{ chocolate.id }}"
                                         id="id_qty_{{ chocolate.id }}">
 
