--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -56,7 +56,9 @@
                     {% for item in cart_items %}
                     <tr>
                         <td class="p-3 w-25">
+                            <div class="choc-image-container-cart">
                             <img class="img-fluid rounded" src="{{ item.chocolate.choc_image.url }}">
+                            </div>
                         </td>
                         <td class="py-3">
                             <p class="my-0"><strong>{{ item.chocolate.choc_friendly_name }}</strong></p>
@@ -64,7 +66,7 @@
                         <td class="py-3">
                             <p class="my-0">€{{ item.chocolate.choc_price }}</p>
                         </td>
-                        <td class="py-3 w-25">
+                        <td id="cart-quantity-col" class="py-3 w-25">
 
                             <!-- The form below allows user to adjust item quantity at the cart screen -->
                             <form method="POST" action="{% url 'adjust_cart' item.item_id %}" class="form update-form">
