--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -4,7 +4,7 @@
 
 <!-- Additional sub-header block below main header, extended from base.html -->
 {% block page_header %}
-<div class="container header-container col-8 mx-auto">
+<div class="container header-container col-8 mx-auto mb-3">
     <div class="row">
         <div class="col">
 
@@ -27,7 +27,7 @@
 
         <!-- First column is the chocolate image container -->
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
-            <div class="choc-image-container my-5">
+            <div class="choc-image-container-detail my-5">
                 {% if chocolate.choc_image %}
                 <a href="{{ chocolate.choc_image.url }}" target="_blank">
                     <img class="card-img-top img-fluid rounded-2" src="{{ chocolate.choc_image.url }}"
