--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -42,12 +42,12 @@
                 <table class="table table-sm table-borderless">
 
                     <!-- Header row of table with column titles -->
-                    <thead class="text-black">
+                    <thead class="purple-text">
                         <tr>
                             <th scope="col">Chocolate Info</th>
-                            <th scope="col"></th>
+                            <th scope="col">Chocolate Name</th>
                             <th scope="col">Price</th>
-                            <th scope="col">Qty</th>
+                            <th scope="col">Quantity</th>
                             <th scope="col">Subtotal</th>
                         </tr>
                     </thead>
@@ -57,7 +57,7 @@
                     <tr>
                         <td class="p-3 w-25">
                             <div class="choc-image-container-cart">
-                            <img class="img-fluid rounded" src="{{ item.chocolate.choc_image.url }}">
+                                <img class="img-fluid rounded" src="{{ item.chocolate.choc_image.url }}">
                             </div>
                         </td>
                         <td class="py-3">
