--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -25,10 +25,9 @@
     <div class="row">
         <div class="col">
             <hr>
-            <h2 class="logo-font mb-4">
-                Shopping Cart
+            <h2 class="purple-text mt-5 mb-5 text-center">
+                What's in your cart..
             </h2>
-            <hr>
         </div>
     </div>
 
@@ -44,7 +43,7 @@
                     <!-- Header row of table with column titles -->
                     <thead class="purple-text">
                         <tr>
-                            <th scope="col">Chocolate Info</th>
+                            <th scope="col" class="text-center"></th>
                             <th scope="col">Chocolate Name</th>
                             <th scope="col">Price</th>
                             <th scope="col">Quantity</th>
@@ -61,10 +60,10 @@
                             </div>
                         </td>
                         <td class="py-3">
-                            <p class="my-0"><strong>{{ item.chocolate.choc_friendly_name }}</strong></p>
+                            <p class="my-0 purple-text">{{ item.chocolate.choc_friendly_name }}</p>
                         </td>
                         <td class="py-3">
-                            <p class="my-0">€{{ item.chocolate.choc_price }}</p>
+                            <p class="my-0 purple-text">€{{ item.chocolate.choc_price }}</p>
                         </td>
                         <td id="cart-quantity-col" class="py-3 w-25">
 
@@ -107,7 +106,7 @@
                             <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"><small>Remove</small></a>
                         </td>
                         <td class="py-3">
-                            <p class="my-0">€{{ item.chocolate.choc_price | calc_subtotal:item.quantity }}</p>
+                            <p class="my-0 purple-text">€{{ item.chocolate.choc_price | calc_subtotal:item.quantity }}</p>
                         </td>
                     </tr>
                     {% endfor %}
