--- a/static/css/base.css
+++ b/static/css/base.css
@@ -201,7 +201,9 @@ link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
 .choc-image-container-cart {
     height: auto;
     width: auto;
-    max-width: 28rem;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 15rem;
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 0px 10px #ed82ed;
