Add subtle fade in animation to logo heart icon

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -149,8 +149,8 @@
 
             {% else %}
             <!-- If no item is in the cart, the message below is displayed instead -->
-            <p class="lead mb-5">
-                Your cart is empty!
+            <p class="lead mt-5 mb-5 purple-text text-center">
+                ..Oh, hang on, it's actually empty.<br>Some chocolate might look good in here!
             </p>
             <!-- Link to chocolates is shown when cart is empty -->
             <a href="{% url 'chocolates' %}" class="btn btn-outline-black rounded-2 btn-lg">
