--- a/templates/base.html
+++ b/templates/base.html
@@ -105,15 +105,15 @@
 
             <!-- Account log in dtl logic -->
             <div class="dropdown-menu border-purple" aria-labelledby="user-options">
-              {% if request.user.is_authenticated %}
-              {% if request.user.is_superuser %}
-              <a href="" class="dropdown-item purple-text">Product Management</a>
-              {% endif %}
-              <a href="" class="dropdown-item purple-text">My Profile</a>
-              <a href="{% url 'account_logout' %}" class="dropdown-item purple-text"><strong>Logout</strong></a>
+                {% if request.user.is_authenticated %}
+                  {% if request.user.is_superuser %}
+                  <a href="" class="dropdown-item purple-text">Chocolate Management</a>
+                  {% endif %}
+                <a href="" class="dropdown-item purple-text">My Profile</a>
+                <a href="{% url 'account_logout' %}" class="dropdown-item purple-text"><strong>Logout</strong></a>
               {% else %}
-              <a href="{% url 'account_signup' %}" class="dropdown-item purple-text">Register</a>
-              <a href="{% url 'account_login' %}" class="dropdown-item purple-text"><strong>Login</strong></a>
+                <a href="{% url 'account_signup' %}" class="dropdown-item purple-text">Register</a>
+                <a href="{% url 'account_login' %}" class="dropdown-item purple-text"><strong>Login</strong></a>
               {% endif %}
             </div>
           </li>
