--- a/static/css/base.css
+++ b/static/css/base.css
@@ -382,8 +382,20 @@ a.category-badge > span.badge:hover {
     
 }
 
-
-
+/* Fade in animation was copied directly from https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-css/ */
+.message-container {
+    animation: fadeInAnimation ease 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
 
 
 .custom-toast {
