--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -148,19 +148,21 @@
             </div>
 
             {% else %}
-            <!-- If no item is in the cart, the message below is displayed instead -->
-            <p class="lead mt-5 mb-5 purple-text text-center">
-                ..Oh, hang on, it's actually empty.<br>Some chocolate might look good in here!
-            </p>
-            <!-- Link to chocolates is shown when cart is empty -->
-            <a href="{% url 'chocolates' %}" class="btn btn-outline-black rounded-2 btn-lg">
-                <span class="icon">
-                    <i class="fas fa-chevron-left"></i>
-                </span>
-                <span>
-                    Keep Shopping
-                </span>
-            </a>
+            <div class="text-center">
+                <!-- If no item is in the cart, the message below is displayed instead -->
+                <p class="lead mt-5 mb-5 purple-text text-center">
+                    ..Oh, hang on, it's actually empty.<br>Some chocolate might look good in here!
+                </p>
+                <!-- Link to chocolates is shown when cart is empty -->
+                <a href="{% url 'chocolates' %}" class="btn btn-outline-black rounded-2 btn-lg">
+                    <span class="icon">
+                        <i class="fas fa-chevron-left"></i>
+                    </span>
+                    <span>
+                        Keep Shopping
+                    </span>
+                </a>
+            </div>
             {% endif %}
         </div>
     </div>
