--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -117,7 +117,7 @@
                         <div id="add-to-cart-button-container">
 
                             <!-- Keep shopping button -->
-                            <a href="{% url 'chocolates' %}" id="keep-shopping-button">
+                            <a href="{% url 'chocolates' %}" class="keep-shopping-button">
                                 <span>
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
