Change bag icon to shopping cart in nav bar

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -154,8 +154,8 @@
                     ..Oh, hang on, it's actually empty.<br>Some chocolate might look good in here!
                 </p>
                 <!-- Link to chocolates is shown when cart is empty -->
-                <a href="{% url 'chocolates' %}" class="btn btn-outline-black rounded-2 btn-lg">
-                    <span class="icon">
+                <a href="{% url 'chocolates' %}" class="keep-shopping-button">
+                    <span>
                         <i class="fas fa-chevron-left"></i>
                     </span>
                     <span>
