--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -59,7 +59,7 @@
         <a class="{% if grand_total %}active-cart font-weight-bold{% else %}purple-text{% endif %} nav-link d-block d-lg-none"
             href="{% url 'view_cart' %}">
             <div class="text-center">
-                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                <div><i class="fas fa-solid fa-cart-shopping fa-lg"></i></div>
                 <p class="my-0">
                     {% if grand_total %}
                     ${{ grand_total|floatformat:2 }}
