Fix layout of buttons in chocolate_detail.html

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -151,15 +151,15 @@
             <div class="text-center">
                 <!-- If no item is in the cart, the message below is displayed instead -->
                 <p class="lead mt-5 mb-5 purple-text text-center">
-                    ..Oh, hang on, it's actually empty.<br>Some chocolate might look good in here!
+                    ..Oh, it's actually empty.<br>Some chocolate might look good in here.
                 </p>
                 <!-- Link to chocolates is shown when cart is empty -->
-                <a href="{% url 'chocolates' %}" class="keep-shopping-button">
+                <a href="{% url 'chocolates' %}" class="keep-shopping-button btn-lrg">
                     <span>
                         <i class="fas fa-chevron-left"></i>
                     </span>
                     <span>
-                        Keep Shopping
+                        Take me to your chocolate!
                     </span>
                 </a>
             </div>
