--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -46,7 +46,7 @@
         <div class="col-12 col-md-6 col-lg-4">
             <div class="chocolate-details-container mb-5 mt-md-5">
                 <p class="mb-0">{{ chocolate.choc_name }}</p>
-                <p class="lead mb-0 text-left font-weight-bold">${{ chocolate.choc_price }}</p>
+                <p class="lead mb-0 text-left font-weight-bold">€{{ chocolate.choc_price }}</p>
 
                 <!-- Displays the chocolate category below the price (e.g Dark, Milk, White etc) -->
                 {% if chocolate.choc_category_display %}
