--- a/static/css/base.css
+++ b/static/css/base.css
@@ -277,6 +277,7 @@ a.category-badge > span.badge:hover {
     color: #fff !important;
     border-radius: 5px !important;
     border: 1px solid #551b8c;
+    box-shadow: 0 0px 10px #ed82ed;
 }
 
 .btt-button {
