Update text displayed when cart is empty

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -151,7 +151,7 @@
             <div class="text-center">
                 <!-- If no item is in the cart, the message below is displayed instead -->
                 <p class="lead mt-5 mb-5 purple-text text-center">
-                    ..Oh, it's actually empty.<br>Some chocolate might look good in here.
+                    ..Oh, it's actually empty.<br>Some chocolate might look good in here.<br>Just saying..
                 </p>
                 <!-- Link to chocolates is shown when cart is empty -->
                 <a href="{% url 'chocolates' %}" class="keep-shopping-button btn-lrg">
