--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -29,7 +29,7 @@
 
             {% for c in current_categories %}
             <a class="category-badge text-decoration-none" href="{% url 'chocolates' %}?category={{ c.choc_friendly_name }}">
-                <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.choc_friendly_name }}</span>
+                <span class="p-2 mt-2 badge rounded-0 border">{{ c.choc_friendly_name }}</span>
             </a>
         {% endfor %}
         </div>
