--- a/static/css/base.css
+++ b/static/css/base.css
@@ -276,7 +276,7 @@ a.category-badge > span.badge:hover {
     background: #c71585 !important;
     color: #fff !important;
     border-radius: 5px !important;
-    border: 1px solid #551b8c;
+    border: 1px solid #ed82ed;
     box-shadow: 0 0px 10px #ed82ed;
 }
 
