--- a/static/css/base.css
+++ b/static/css/base.css
@@ -182,6 +182,7 @@ link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 0px 10px #ed82ed;
+    border: 1px solid #ed82ed;
 }
 
 /* Used to create a container for the chocolate image in chocolate_detail.html */
@@ -192,6 +193,7 @@ link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 0px 10px #ed82ed;
+    border: 1px solid #ed82ed;
 }
 
 /* Used to create a container for the chocolate image in cart.html */
@@ -204,6 +206,7 @@ link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 0px 10px #ed82ed;
+    border: 1px solid #ed82ed;
 }
 
 
