Fix category links in main-nav.html

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -27,13 +27,13 @@
                 Keto
             </a>
             <div class="dropdown-menu border-purple" aria-labelledby="keto-chocolate-link">
-                <a href="{% url 'chocolates' %}?choc_category_display=dark_choc" class="dropdown-item purple-text">Dark
+                <a href="{% url 'chocolates' %}?choc_category_display=keto_dark_choc" class="dropdown-item purple-text">Dark
                     Chocolate</a>
-                <a href="{% url 'chocolates' %}?choc_category_display=milk_choc" class="dropdown-item purple-text">Milk
+                <a href="{% url 'chocolates' %}?choc_category_display=keto_milk_choc" class="dropdown-item purple-text">Milk
                     Chocolate</a>
-                <a href="{% url 'chocolates' %}?choc_category_display=white_choc"
+                <a href="{% url 'chocolates' %}?choc_category_display=keto_white_choc"
                     class="dropdown-item purple-text">White Chocolate</a>
-                <a href="{% url 'chocolates' %}?choc_category_display=dark_choc,milk_choc,white_choc"
+                <a href="{% url 'chocolates' %}?choc_category_display=keto_dark_choc,keto_milk_choc,keto_white_choc"
                     class="dropdown-item purple-text"><strong>All Keto</strong></a>
             </div>
         </li>
@@ -45,13 +45,13 @@
                 Vegan
             </a>
             <div class="dropdown-menu border-purple" aria-labelledby="keto-chocolate-link">
-                <a href="{% url 'chocolates' %}?choc_category_display=dark_choc" class="dropdown-item purple-text">Dark
+                <a href="{% url 'chocolates' %}?choc_category_display=vegan_dark_choc" class="dropdown-item purple-text">Dark
                     Chocolate</a>
-                <a href="{% url 'chocolates' %}?choc_category_display=milk_choc" class="dropdown-item purple-text">Milk
+                <a href="{% url 'chocolates' %}?choc_category_display=vegan_milk_choc" class="dropdown-item purple-text">Milk
                     Chocolate</a>
-                <a href="{% url 'chocolates' %}?choc_category_display=white_choc"
+                <a href="{% url 'chocolates' %}?choc_category_display=vegan_white_choc"
                     class="dropdown-item purple-text">White Chocolate</a>
-                <a href="{% url 'chocolates' %}?choc_category_display=dark_choc,milk_choc,white_choc"
+                <a href="{% url 'chocolates' %}?choc_category_display=vegan_dark_choc,vegan_milk_choc,vegan_white_choc"
                     class="dropdown-item purple-text"><strong>All Vegan</strong></a>
             </div>
         </li>
@@ -63,13 +63,13 @@
                 Gluten-Free
             </a>
             <div class="dropdown-menu border-purple" aria-labelledby="keto-chocolate-link">
-                <a href="{% url 'chocolates' %}?choc_category_display=dark_choc" class="dropdown-item purple-text">Dark
+                <a href="{% url 'chocolates' %}?choc_category_display=gluten_free_dark_choc" class="dropdown-item purple-text">Dark
                     Chocolate</a>
-                <a href="{% url 'chocolates' %}?choc_category_display=milk_choc" class="dropdown-item purple-text">Milk
+                <a href="{% url 'chocolates' %}?choc_category_display=gluten_free_milk_choc" class="dropdown-item purple-text">Milk
                     Chocolate</a>
-                <a href="{% url 'chocolates' %}?choc_category_display=white_choc"
+                <a href="{% url 'chocolates' %}?choc_category_display=gluten_free_white_choc"
                     class="dropdown-item purple-text">White Chocolate</a>
-                <a href="{% url 'chocolates' %}?choc_category_display=dark_choc,milk_choc,white_choc"
+                <a href="{% url 'chocolates' %}?choc_category_display=gluten_free_dark_choc,gluten_free_milk_choc,gluten_free_white_choc"
                     class="dropdown-item purple-text"><strong>All Gluten-Free</strong></a>
             </div>
         </li>
