--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -91,7 +91,7 @@
                                         <button class="decrement-qty btn btn-black rounded-0"
                                             data-item_id="{{ chocolate.id }}" id="decrement-qty_{{ chocolate.id }}">
                                             <span class="icon">
-                                                <i class="fas fa-minus"></i>
+                                                <i class="fas fa-minus purple-text font-weight-bold"></i>
                                             </span>
                                         </button>
                                     </div>
@@ -105,7 +105,7 @@
                                         <button class="increment-qty btn btn-black rounded-0"
                                             data-item_id="{{ chocolate.id }}" id="increment-qty_{{ chocolate.id }}">
                                             <span class="icon">
-                                                <i class="fas fa-plus"></i>
+                                                <i class="fas fa-plus purple-text font-weight-bold"></i>
                                             </span>
                                         </button>
                                     </div>
