--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -82,7 +82,7 @@
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-12">
-                            <p class="mt-3"><strong>Quantity:</strong></p>
+                            <p class="mt-3 purple-text"><strong>Quantity:</strong></p>
                             <div class="form-group w-50">
                                 <div class="input-group">
 
@@ -96,7 +96,7 @@
                                         </button>
                                     </div>
 
-                                    <input class="form-control qty_input text-center" type="number" name="quantity" value="1"
+                                    <input class="form-control qty_input text-center border-purple rounded-lg" type="number" name="quantity" value="1"
                                         min="1" max="99" data-item_id="{{ chocolate.id }}"
                                         id="id_qty_{{ chocolate.id }}">
 
